--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.11.1",
+    "axios": "^1.10.0",
     "dotenv": "^17.1.0",
     "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.2",
