--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.11.1",
     "axios": "^1.10.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.1.0",
     "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "seedrandom": "^3.0.5",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
